hphp/test/slow/hhbbc/uninstantiable-closure.php.expectf
Fatal error: unknown class DoesntExist in %s/uninstantiable-closure.php on line 3
